SED-282 fixing online and more text wrapping issues

--- a/step-controller/step-controller-server-webapp/src/main/resources/webapp/css/step.css
+++ b/step-controller/step-controller-server-webapp/src/main/resources/webapp/css/step.css
@@ -684,6 +684,11 @@ resource-input .input-group {
 	-ms-word-wrap: break-word;
 }
 
+.text-wrapping-anywhere {
+	overflow-wrap: anywhere;
+	-ms-word-wrap: anywhere;
+}
+
 tbody .form-group {
 	margin-bottom: 0px;
 }
